--- a/codingmagic/package.json
+++ b/codingmagic/package.json
@@ -10,11 +10,13 @@
 		"check:watch": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json --watch"
 	},
 	"devDependencies": {
+		"@melt-ui/svelte": "^0.79.1",
 		"@poppanator/sveltekit-svg": "^4.2.1",
 		"@sveltejs/adapter-auto": "^3.2.0",
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/jquery": "^3.5.29",
+		"sass": "^1.77.1",
 		"supabase": "^1.142.2",
 		"svelte": "^4.2.7",
 		"svelte-check": "^3.6.0",
