--- a/codingmagic/package.json
+++ b/codingmagic/package.json
@@ -29,6 +29,7 @@
 	"dependencies": {
 		"@supabase/auth-helpers-sveltekit": "^0.12.0",
 		"@supabase/ssr": "^0.1.0",
-		"@supabase/supabase-js": "^2.43.2"
+		"@supabase/supabase-js": "^2.43.2",
+		"dotenv": "^16.4.5"
 	}
 }
