--- a/codingmagic/tsconfig.json
+++ b/codingmagic/tsconfig.json
@@ -11,7 +11,8 @@
 		"strict": true,
 		"moduleResolution": "bundler"
 	},
-	"include": ["src/**/*"]
+	"include": ["src/**/*", 
+	"./.svelte-kit/ambient.d.ts"],
 	// Path aliases are handled by https://kit.svelte.dev/docs/configuration#alias
 	//
 	// If you want to overwrite includes/excludes, make sure to copy over the relevant includes/excludes
