--- a/codingmagic/package.json
+++ b/codingmagic/package.json
@@ -16,6 +16,7 @@
 		"@sveltejs/kit": "^2.0.0",
 		"@sveltejs/vite-plugin-svelte": "^3.0.0",
 		"@types/jquery": "^3.5.29",
+		"monaco-editor": "^0.49.0",
 		"sass": "^1.77.1",
 		"supabase": "^1.142.2",
 		"svelte": "^4.2.7",
