--- a/codingmagic/package.json
+++ b/codingmagic/package.json
@@ -31,6 +31,7 @@
 		"@supabase/auth-helpers-sveltekit": "^0.12.0",
 		"@supabase/ssr": "^0.1.0",
 		"@supabase/supabase-js": "^2.43.2",
-		"dotenv": "^16.4.5"
+		"dotenv": "^16.4.5",
+		"monaco-editor-webpack-plugin": "^7.1.0"
 	}
 }
